tests/snapshots/lexer__numbers__int_zero.snap
---
source: tests/lexer.rs
expression: "lex(\"0\")"
---
Ok(
    [
        Token {
            kind: Int(
                0,
            ),
            span: Span {
                start: 0,
                end: 1,
            },
        },
        Token {
            kind: Eof,
            span: Span {
                start: 1,
                end: 1,
            },
        },
    ],
)
