tests/snapshots/lexer__numbers__multi_mixed.snap
---
source: tests/lexer.rs
expression: "lex(\"42 3.14 1e10\")"
---
Ok(
    [
        Token {
            kind: Int(
                42,
            ),
            span: Span {
                start: 0,
                end: 2,
            },
        },
        Token {
            kind: Float(
                3.14,
            ),
            span: Span {
                start: 3,
                end: 7,
            },
        },
        Token {
            kind: Float(
                10000000000.0,
            ),
            span: Span {
                start: 8,
                end: 12,
            },
        },
        Token {
            kind: Eof,
            span: Span {
                start: 12,
                end: 12,
            },
        },
    ],
)
