tests/snapshots/lexer__numbers__multi_sequence.snap
---
source: tests/lexer.rs
expression: "lex(\"1 2 3\")"
---
Ok(
    [
        Token {
            kind: Int(
                1,
            ),
            span: Span {
                start: 0,
                end: 1,
            },
        },
        Token {
            kind: Int(
                2,
            ),
            span: Span {
                start: 2,
                end: 3,
            },
        },
        Token {
            kind: Int(
                3,
            ),
            span: Span {
                start: 4,
                end: 5,
            },
        },
        Token {
            kind: Eof,
            span: Span {
                start: 5,
                end: 5,
            },
        },
    ],
)
